# nfpy

./: .gitignore  pyproject.toml  requirements.txt  setup.py
nfpy/: Calendar.py  Configuration.py  DatatypeFactory.py  __init__.py  db_static_data.json  db_static_data.p  nfpyConf.ini  schema.sql
nfpy/Assets/: AggregationMixin.py  Asset.py  AssetFactory.py  Bond.py  Company.py  Currency.py  CurrencyFactory.py  Curve.py  DerivedSeries.py  Equity.py  Etf.py  FinancialItem.py  Fx.py  FxFactory.py  Index.py  Indices.py  Portfolio.py  Position.py  Rate.py  __init__.py
nfpy/DB/: DB.py  DBTypes.py  QueryBuilder.py  Table.py  TableFiddler.py  __init__.py
nfpy/Downloader/: BaseDownloader.py  BaseProvider.py  BorsaItaliana.py  DownloadFactory.py  DownloadsConf.py  ECB.py  FRED.py  FinancialsSynthetic.py  IB.py  IBApp.py  ImportFactory.py  ImportsConf.py  Investing.py  Nasdaq.py  OECD.py  Objs.py  Yahoo.py  __init__.py
nfpy/Financial/: BaseFundamentalModel.py  BondMath.py  CurrencyFactory.py  DiscountFactor.py  DiscountedCashFlowModel.py  DividendDiscountModel.py  Dividends.py  EquityMath.py  FinancialsFactory.py  FundamentalsFactory.py  GordonGrowthModel.py  OptimizationEngine.py  PortfolioEngine.py  RateFactory.py  Returns.py  TS.py  TSMath.py  __init__.py
nfpy/Handlers/: AssetFactory.py  Calendar.py  Configuration.py  CurrencyFactory.py  DatatypeFactory.py  Inputs.py  Plotting.py  QueryBuilder.py  RateFactory.py
scripts/: calculateBeta.py  calculateEquityBenchmarks.py  priceEquity.py
tests/: Covariance_time.ipynb  DCF_performance.ipynb  Last_nonnan_time.ipynb  Rolling_sum_time.ipynb  Time_series_slicing_time.ipynb  Ts_resample_time.ipynb  Ts_yield_method_time.ipynb
(+323 files in other folders)
